backend_gettask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-svc
spec:
  selector:
    app: get
  ports:
  - port: 80
    targetPort: 8000
