backend_gettask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-ingress
  labels:
    app: get
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: get.satishranjan.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-svc
            port: 
              number: 80
